2013-10-30  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	* configure.ac: Changed a case statement to include i386.
	* configure: Regenerated.

2013-10-30  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	* configure: Reconfigured.
	* configure.ac: Add AC_FUNC_ALLOCA.
	* runtime/sysdep-unix.c: Added check for alloca.h before 
	including it.
	* config/x86/cilk-abi-vla.c: Likewise.
	* runtime/cilk_fiber-unix.cpp: Likewise.

2013-10-29  Tobias Burnus  <burnus@net-b.de>

	* configure.ac: Add AM_MAINTAINER_MODE.
	* aclocal.m4: Regenerate.
	* configure.ac: Regenerate.
	* Makefile.in: Regenerate.

2013-10-23  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	* libcilkrts/Makefile.am: New file.  Libcilkrts version 3902.
	* libcilkrts/Makefile.in: Likewise
	* libcilkrts/README: Likewise
	* libcilkrts/aclocal.m4: Likewise
	* libcilkrts/configure: Likewise
	* libcilkrts/configure.ac: Likewise
	* libcilkrts/include/cilk/cilk.h: Likewise
	* libcilkrts/include/cilk/cilk_api.h: Likewise
	* libcilkrts/include/cilk/cilk_api_linux.h: Likewise
	* libcilkrts/include/cilk/cilk_stub.h: Likewise
	* libcilkrts/include/cilk/cilk_undocumented.h: Likewise
	* libcilkrts/include/cilk/common.h: Likewise
	* libcilkrts/include/cilk/holder.h: Likewise
	* libcilkrts/include/cilk/hyperobject_base.h: Likewise
	* libcilkrts/include/cilk/metaprogramming.h: Likewise
	* libcilkrts/include/cilk/reducer.h: Likewise
	* libcilkrts/include/cilk/reducer_file.h: Likewise
	* libcilkrts/include/cilk/reducer_list.h: Likewise
	* libcilkrts/include/cilk/reducer_max.h: Likewise
	* libcilkrts/include/cilk/reducer_min.h: Likewise
	* libcilkrts/include/cilk/reducer_min_max.h: Likewise
	* libcilkrts/include/cilk/reducer_opadd.h: Likewise
	* libcilkrts/include/cilk/reducer_opand.h: Likewise
	* libcilkrts/include/cilk/reducer_opmul.h: Likewise
	* libcilkrts/include/cilk/reducer_opor.h: Likewise
	* libcilkrts/include/cilk/reducer_opxor.h: Likewise
	* libcilkrts/include/cilk/reducer_ostream.h: Likewise